--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- slider stylesheet -->
@@ -13,7 +12,7 @@
     />
 
     <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
     <!-- fonts style -->
     <link
@@ -21,17 +20,17 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- responsive style -->
-    <link href="/css/responsive.css" rel="stylesheet" />
+    <link href="css/responsive.css" rel="stylesheet" />
 
     <title>BecomePro</title>
   </head>
-  
+
   <body>
     <div id="root"></div>
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/bootstrap.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
