fix script paths

--- a/client/index.html
+++ b/client/index.html
@@ -20,17 +20,17 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="/css/responsive.css" rel="stylesheet" />
 
     <title>BecomePro</title>
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
